# sharklane

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
docs/: index.md  mkdocs.yml  quickstart.md
docs/api/: ais.md  masking.md  shipping_lanes.md  simulate.md  simulator.md  viz.md
docs/guides/: colab_setup.md  reroute_algorithm.md  troubleshooting.md  workflow.md
examples/: example_saleh_bay.py
examples/colab/: saleh_bay_colab_example.ipynb
examples/saleh_bay_data/: core_habitat.geojson  lane.geojson  saleh_bay_land.geojson
sharklane/: __init__.py  ais.py  io.py  masking.py  raster_vectorize.py  shipping_lanes.py  simulator.py
sharklane/simulate/: __init__.py  laneshift.py  reroute.py  speed.py
sharklane/viz/: __init__.py  animate.py  ship.py  ship_animate.py  static.py
tests/: conftest.py  data_zone_10_cri_zones.geojson  test_core_pipeline.py  test_raster_vectorize.py  test_ship_animation.py  test_shipping_lanes.py
